correction on onclick with ontouchstart, blur working, nav working well, everything now on mobile, nothing done for desktop, first form finished

--- a/style.less
+++ b/style.less
@@ -6,42 +6,137 @@ body {
   scroll-behavior: smooth;
 }
 
-body.hide-scrollbar {
-  overflow: hidden;
-}
-
 .main {
   .phone-top-bar {
-    display: none;
+    background-color: rgb(0, 0, 0);
+    height: 160px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .menu-button {
+      position: absolute;
+      left: 35px;
+      display: inline-block;
+      cursor: pointer;
+      img {
+        height: 90px;
+      }
+    }
+
+    .logo {
+      img {
+        height: 150px;
+      }
+    }
   }
   nav {
     ul {
+      height: calc(100vh - 260px);
+      height: calc(100dvh - 260px);
+      position: absolute;
+      width: 100vw;
+
       background-color: rgb(30, 30, 30);
       margin: 0;
       padding: 0;
-      height: 60px;
 
-      list-style-type: none;
-      font-size: 22px;
+      padding-top: 100px;
+      font-size: 50px;
 
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      justify-content: start;
       align-items: center;
-      gap: 40px;
-      
+      gap: 70px;
+
+      list-style-type: none;
+
       li a {
         text-decoration: none;
         color: white;
+        cursor: pointer;
+      }
+    }
+  }
 
-        &:hover {
-          color: rgb(245, 249, 18);
-        }
+  nav ul {
+    opacity: 0;
+    transform: translateX(-100%);
+    transition: opacity 300ms, transform 300ms;
+  }
+
+  nav.show ul {
+    opacity: 1;
+    
+    transform: translateX(0);
+  }
+
+  .container-form {
+    display: none;
+    
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100vw;
+      height: calc(100vh - 160px);
+      height: calc(100dvh - 160px);
+      background-image: url('images/clermont.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      filter: blur(15px);
+    }
+  }
+
+  .container-form.show {
+    display: block;
+  }
+
+  .form {
+    background-color: antiquewhite;
+    width: 80vw;
+    height: 70vh;
+    height: 70dvh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+
+    color: black;
+    font-size: 50px;
+
+    .cross {
+      cursor: pointer;
+      position: absolute;
+      top: 15px;
+      right: 15px;
+
+      img {
+        height: 50px;
+        width: 50px;
+      }
+    }
+
+    .firstForm {
+      label {
+        font-size: 40px;
+      }
+      input[type="radio"] {
+        transform: scale(1.5);
+      }
+      input[type="submit"] {
+        font-size: 30px;
+        padding: 10px 20px;
+      }
+      input[type="text"], textarea {
+        font-size: 30px;
       }
     }
   }
 
   .img-clermont {
-    height: 500px;
+    height: 1200px;
     background-image: url('images/clermont.jpg');
     background-size: cover;
     background-position: center;
@@ -54,111 +149,5 @@ body.hide-scrollbar {
     justify-content: center;
 
     font-size: 30px;
-  }
-
-  @media screen and (max-device-width: 500px) {
-    .phone-top-bar {
-      background-color: rgb(0, 0, 0);
-      height: 160px;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      .menu-button {
-        position: absolute;
-        left: 35px;
-        display: inline-block;
-        cursor: pointer;
-        img {
-          height: 90px;
-        }
-      }
-
-      .logo {
-        img {
-          height: 150px;
-        }
-      }
-    }
-    nav {
-      ul {
-        height: calc(100vh - 160px);
-        height: calc(100dvh - 160px);
-        position: absolute;
-        width: 100vw;
-
-        padding-top: 100px;
-        font-size: 50px;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
-        align-items: center;
-        gap: 70px;
-      }
-    }
-
-    nav ul {
-      opacity: 0;
-      transform: translateX(-100%);
-      transition: opacity 350ms, transform 350ms;
-    }
-  
-    nav.show ul {
-      opacity: 1;
-      
-      transform: translateX(0);
-    }
-
-    .container-form {
-      display: none;
-      position: absolute;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-      background-color: rgba(255, 255, 255, 0.5);
-      backdrop-filter: blur(10px);
-    }
-
-    .form {
-      background-color: antiquewhite;
-      width: 80vw;
-      height: 70vh;
-      height: 70dvh;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      position: absolute;
-
-      color: black;
-      font-size: 50px;
-
-      .cross {
-        cursor: pointer;
-        position: absolute;
-        top: 15px;
-        right: 15px;
-
-        img {
-          height: 50px;
-          width: 50px;
-        }
-      }
-
-      .large-select {
-        width: 200px;
-        height: 100px;
-        font-size: 50px;
-      }
-    }
-
-    .container-form.show {
-      display: block;
-    }
-    
-    .img-clermont {
-      height: 1000px;
-    }
   }
 }
